@@ -328,8 +328,9 @@ public class Util {
 
         HeaderUtils.copyResponseTransportHeaders(headers, restletResponse);
         HeaderUtils.extractEntityHeaders(headers, restletResponse.getEntity());
+        
 
-        // Copy extension headers
+        // Copy extension headers, from jax-rs response attributes, and jax-rs api
         @SuppressWarnings("unchecked")
         Series<Header> extensionHeaders = (Series<Header>) jaxRsHeaders
                 .getFirst(HeaderConstants.ATTRIBUTE_HEADERS);
@@ -339,6 +340,7 @@ public class Util {
             attributes.put(HeaderConstants.ATTRIBUTE_HEADERS, extensionHeaders);
             restletResponse.setAttributes(attributes);
         }
+        HeaderUtils.copyExtensionHeaders(headers, restletResponse);
     }
 
     /**
